Added some functionality, need to test

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -23,9 +23,10 @@
                     <p class="col-5 m-0"></p>
                     <p class="col-3 text-center m-0">Total</p>
                     <p class="col-3 text-center m-0"><span id="total-price">0.00</span>€</p>
+                    <button class="col-1 btn btn-outline-success text-center px-0 py-1" onclick="onClickBuyButton()">Buy</button>
                 </div>
-            </div>       
-            <a href="/logout" class="btn btn-outline-secondary">Logout</a>  
+            </div>
+            <a class="btn btn-outline-secondary" href="/logout">Logout</a>  
         </div>
     </div>
 </nav>
